--- a/index.html
+++ b/index.html
@@ -5,223 +5,128 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Employee Management & Time Clock</title>
 
-  <!-- Tailwind CDN + Inter font -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
 
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 
 <body class="bg-gray-100 text-gray-800">
   <div id="app" class="container mx-auto p-4">
 
-    <div id="signup-view" class="hidden max-w-md mx-auto bg-white p-8 rounded-lg shadow-md mt-10">
-  <h2 class="text-2xl font-bold mb-6 text-center">Create Worker Account</h2>
-  <div class="space-y-4">
-    <input type="text" id="signup-name" placeholder="Full Name" class="w-full p-3 border rounded">
-    <input type="email" id="signup-email" placeholder="Email Address" class="w-full p-3 border rounded">
-    <input type="password" id="signup-password" placeholder="Password" class="w-full p-3 border rounded">
-    <button id="finish-signup-btn" class="w-full bg-green-600 text-white font-bold py-3 rounded hover:bg-green-700">
-      Finish Sign Up
-    </button>
-    <button id="back-to-login-btn" class="w-full text-gray-500 text-sm">Back to Login</button>
-  </div>
-</div>
-
-<div id="worker-dashboard-view" class="hidden">
-  <nav class="bg-blue-600 text-white p-4 shadow-md flex justify-around">
-    <button class="worker-nav-btn font-bold" data-target="worker-clock">Clock In/Out</button>
-    <button class="worker-nav-btn font-bold" data-target="worker-schedule">Schedule</button>
-    <button class="worker-nav-btn font-bold" data-target="worker-timesheet">Timesheet</button>
-  </nav>
-  
-  <div class="p-6">
-    <div id="worker-clock" class="worker-section text-center">
-       <h2 class="text-xl mb-4">Time Clock</h2>
-       <button class="bg-green-500 p-6 rounded-full text-white font-bold">START SHIFT</button>
-    </div>
-    <div id="worker-schedule" class="worker-section hidden"><h2>Your Schedule</h2></div>
-    <div id="worker-timesheet" class="worker-section hidden"><h2>Recent Timesheets</h2></div>
-  </div>
-</div>
-
-    <!-- Main Navigation (shown after login) -->
     <div id="main-nav" class="hidden bg-white rounded-lg shadow p-4 mb-6 flex justify-between items-center">
-      <h1 id="nav-title" class="text-2xl font-bold text-gray-700">Labour Management System</h1>
-      <button id="logout-btn"
-        class="hidden bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg">
+      <h1 id="nav-title" class="text-xl font-bold text-gray-700">Labour Hire System</h1>
+      <button id="logout-btn" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg transition">
         Logout
       </button>
     </div>
 
-    <!-- Kiosk / Landing Page -->
-    <div id="kiosk-view" class="kiosk-screen bg-gray-200">
-      <div class="text-center">
-        <h1 class="text-5xl font-bold text-gray-800 mb-10">Your Business Name</h1>
-
-        <button id="login-btn"
-          class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-lg text-2xl m-3">
-          Login
-        </button>
-
-        <button id="time-clock-btn"
-          class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-10 rounded-lg text-2xl m-3">
-          Time Clock
-        </button>
-
-        <button id="induction-btn"
-          class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-4 px-10 rounded-lg text-2xl m-3">
-          Induction
-        </button>
+    <div id="kiosk-view" class="kiosk-screen bg-gray-200 p-10 rounded-xl text-center">
+      <h1 class="text-5xl font-bold text-gray-800 mb-10">Your Business Name</h1>
+      <div class="flex flex-wrap justify-center">
+        <button id="login-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-lg text-2xl m-3 transition">Login</button>
+        <button id="time-clock-btn" class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-10 rounded-lg text-2xl m-3 transition">Time Clock</button>
+        <button id="induction-btn" class="bg-gray-600 hover:bg-gray-700 text-white font-bold py-4 px-10 rounded-lg text-2xl m-3 transition">Induction</button>
       </div>
     </div>
 
-    <!-- Login View -->
     <div id="login-view" class="hidden">
       <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-8 mt-10">
         <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
-
-        <input type="hidden" id="login-role">
-
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-          <input type="email" id="login-email"
-            class="shadow border rounded w-full py-2 px-3 text-gray-700"
-            placeholder="user@example.com">
+          <input type="email" id="login-email" class="shadow border rounded w-full py-2 px-3 text-gray-700" placeholder="user@example.com">
         </div>
-
         <div class="mb-6">
           <label class="block text-gray-700 text-sm font-bold mb-2">Password</label>
-          <input type="password" id="login-password"
-            class="shadow border rounded w-full py-2 px-3 text-gray-700"
-            placeholder="********">
+          <input type="password" id="login-password" class="shadow border rounded w-full py-2 px-3 text-gray-700" placeholder="********">
         </div>
-
-        <div class="flex justify-between space-x-2">
-          <button id="login-submit-btn"
-            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-            Sign In
-          </button>
-
-          <button id="go-to-signup-btn"
-            class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
-            Sign Up
-          </button>
-
-          <button id="back-to-kiosk-from-login-btn"
-            class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded">
-            Back
-          </button>
+        <div class="flex flex-col space-y-3">
+          <button id="login-submit-btn" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 rounded transition">Sign In</button>
+          <button id="go-to-signup-btn" class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-3 rounded transition">Create Worker Account</button>
+          <button id="back-to-kiosk-from-login-btn" class="w-full bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 rounded transition">Back to Home</button>
         </div>
       </div>
     </div>
 
-    <!-- Admin Dashboard -->
-    <div id="admin-dashboard-view" class="hidden">
-      <h2 class="text-3xl font-bold mb-6">Administration Dashboard</h2>
+    <div id="signup-view" class="hidden max-w-md mx-auto bg-white p-8 rounded-lg shadow-md mt-10">
+      <h2 class="text-2xl font-bold mb-6 text-center text-gray-700">Worker Registration</h2>
+      <div class="space-y-4">
+        <div>
+          <label class="block text-sm font-bold text-gray-600">Full Name</label>
+          <input type="text" id="signup-name" class="w-full p-3 border rounded focus:ring-2 focus:ring-green-500 outline-none">
+        </div>
+        <div>
+          <label class="block text-sm font-bold text-gray-600">Email Address</label>
+          <input type="email" id="signup-email" class="w-full p-3 border rounded focus:ring-2 focus:ring-green-500 outline-none">
+        </div>
+        <div>
+          <label class="block text-sm font-bold text-gray-600">Create Password</label>
+          <input type="password" id="signup-password" class="w-full p-3 border rounded focus:ring-2 focus:ring-green-500 outline-none">
+        </div>
+        <button id="finish-signup-btn" class="w-full bg-green-600 text-white font-bold py-3 rounded hover:bg-green-700 transition">
+          Finish Sign Up
+        </button>
+        <button id="back-to-login-btn" class="w-full text-gray-500 text-sm hover:underline">Already have an account? Login</button>
+      </div>
+    </div>
 
+    <div id="worker-dashboard-view" class="hidden">
+      <h2 class="text-3xl font-bold mb-6 text-gray-800 text-center">Worker Dashboard</h2>
+      
+      <nav class="bg-blue-600 text-white p-4 shadow-md flex justify-around mb-6 rounded-lg">
+        <button class="worker-nav-btn font-bold border-b-2 border-white" data-target="worker-clock-section">Clock</button>
+        <button class="worker-nav-btn font-bold" data-target="worker-schedule-section">Schedule</button>
+        <button class="worker-nav-btn font-bold" data-target="worker-timesheet-section">History</button>
+      </nav>
+
+      <div class="bg-white p-6 rounded-lg shadow min-h-[400px]">
+        <div id="worker-clock-section" class="worker-section text-center">
+          <h3 class="text-2xl font-bold mb-6">Time Clock</h3>
+          <div class="flex justify-center space-x-6">
+            <button class="bg-green-500 hover:bg-green-600 p-10 rounded-2xl text-white font-bold text-xl shadow-lg transition transform hover:scale-105">CLOCK IN</button>
+            <button class="bg-red-500 hover:bg-red-600 p-10 rounded-2xl text-white font-bold text-xl shadow-lg transition transform hover:scale-105">CLOCK OUT</button>
+          </div>
+        </div>
+
+        <div id="worker-schedule-section" class="worker-section hidden">
+          <h3 class="text-2xl font-bold mb-4">Upcoming Shifts</h3>
+          <ul class="space-y-3">
+            <li class="p-4 bg-gray-50 rounded-lg border-l-4 border-blue-500 flex justify-between">
+              <span><strong>Wed 13 Mar</strong> - Site A</span>
+              <span class="text-blue-600 font-bold">7:00 AM</span>
+            </li>
+          </ul>
+        </div>
+
+        <div id="worker-timesheet-section" class="worker-section hidden">
+          <h3 class="text-2xl font-bold mb-4">Past Timesheets</h3>
+          <p class="text-gray-500 italic">No history available yet.</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="admin-dashboard-view" class="hidden">
+      <h2 class="text-3xl font-bold mb-6">Admin Control Panel</h2>
       <div class="bg-white rounded-lg shadow p-4 mb-6">
         <nav class="flex space-x-4">
-          <button class="admin-nav-btn" data-target="employee-list-section">Employees</button>
-          <button class="admin-nav-btn" data-target="sites-list-section">Sites</button>
-          <button class="admin-nav-btn" data-target="timesheet-export-section">Timesheets</button>
+          <button class="admin-nav-btn bg-gray-100 px-4 py-2 rounded font-bold" data-target="employee-list-section">Employees</button>
+          <button class="admin-nav-btn bg-gray-100 px-4 py-2 rounded font-bold" data-target="sites-list-section">Sites</button>
+          <button class="admin-nav-btn bg-gray-100 px-4 py-2 rounded font-bold" data-target="timesheet-export-section">Timesheets</button>
         </nav>
       </div>
-
       <div id="employee-list-section" class="admin-section"></div>
       <div id="sites-list-section" class="admin-section hidden"></div>
       <div id="timesheet-export-section" class="admin-section hidden"></div>
     </div>
 
-    <!-- Worker Dashboard View -->
-<div id="worker-dashboard-view" class="hidden">
-  <h2 class="text-3xl font-bold mb-6 text-gray-800">
-    Worker Dashboard
-  </h2>
-
-  <!-- Quick actions -->
-  <div class="mb-8 flex space-x-4">
-    <button
-      id="worker-time-clock-btn"
-      class="bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg text-lg"
-    >
-      Go to Time Clock
-    </button>
-  </div>
-
-  <!-- Upcoming Shifts -->
-  <div class="bg-white p-6 rounded-lg shadow mb-8">
-    <h3 class="text-2xl font-semibold mb-4">Upcoming Shifts</h3>
-
-    <ul class="space-y-3">
-      <!-- Placeholder item -->
-      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
-        <div>
-          <p class="font-semibold">Tuesday 12 March</p>
-          <p class="text-sm text-gray-600">7:00 AM – 3:00 PM · Site A</p>
-        </div>
-        <span class="text-blue-600 font-medium">Scheduled</span>
-      </li>
-
-      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
-        <div>
-          <p class="font-semibold">Wednesday 13 March</p>
-          <p class="text-sm text-gray-600">6:30 AM – 2:30 PM · Site B</p>
-        </div>
-        <span class="text-blue-600 font-medium">Scheduled</span>
-      </li>
-    </ul>
-  </div>
-
-  <!-- Past Shifts -->
-  <div class="bg-white p-6 rounded-lg shadow">
-    <h3 class="text-2xl font-semibold mb-4">Past Shifts</h3>
-
-    <ul class="space-y-3">
-      <!-- Placeholder item -->
-      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
-        <div>
-          <p class="font-semibold">Monday 11 March</p>
-          <p class="text-sm text-gray-600">7.5 hours · Site A</p>
-        </div>
-        <button
-          class="bg-blue-500 hover:bg-blue-600 text-white text-sm font-semibold py-2 px-4 rounded-lg"
-        >
-          Request Edit
-        </button>
-      </li>
-
-      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
-        <div>
-          <p class="font-semibold">Sunday 10 March</p>
-          <p class="text-sm text-gray-600">8.0 hours · Site B</p>
-        </div>
-        <span class="text-gray-500 text-sm">Approved</span>
-      </li>
-    </ul>
-  </div>
-</div>
-
-    <!-- Time Clock -->
-    <div id="time-clock-screen" class="hidden kiosk-screen bg-gray-200">
-      <!-- unchanged time clock markup -->
-    </div>
-
-  </div>
-
-  <!-- Message Modal -->
-  <div id="message-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 hidden items-center justify-center">
-    <div class="bg-white p-8 rounded-lg shadow-lg text-center max-w-sm">
-      <p id="message-text" class="text-lg mb-6"></p>
-      <button id="close-message-modal-btn"
-        class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-6 rounded">
-        OK
-      </button>
+  </div> <div id="message-modal" class="modal fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+    <div class="bg-white p-8 rounded-xl shadow-2xl text-center max-w-sm mx-4">
+      <p id="message-text" class="text-lg font-medium mb-6"></p>
+      <button id="close-message-modal-btn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg transition">OK</button>
     </div>
   </div>
 
-  <!-- Firebase + App Scripts -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
     import { getAuth } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
@@ -240,7 +145,10 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
+    // Make these available to your JS files
     window.__services = { app, auth, db };
+    
+    // Start the application
     import("./assets/js/main.js");
   </script>
 </body>
